// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text matches snapshot 1`] = `
<div
  className="css-text-901oao r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-1it3c9n r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
  dir="auto"
>
  Example Text
</div>
`;

exports[`Text matches snapshot with different fontSize 1`] = `
<div
  className="css-text-901oao r-fontFamily-vnw8o6 r-fontSize-adyw6z r-fontWeight-1it3c9n r-lineHeight-135wba7 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
  dir="auto"
>
  Example Text
</div>
`;

exports[`Text matches snapshot with different textAlign 1`] = `
<div
  className="css-text-901oao r-color-howw7u r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-1it3c9n r-lineHeight-hbpseb r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
  dir="auto"
>
  Example Text
</div>
`;

exports[`Text matches snapshot with string color 1`] = `
<div
  className="css-text-901oao r-color-howw7u r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-1it3c9n r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
  dir="auto"
>
  Example Text
</div>
`;

exports[`Text matches snapshot with theme defined color 1`] = `
<div
  className="css-text-901oao r-color-1r0wm8w r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-1it3c9n r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
  dir="auto"
>
  Example Text
</div>
`;
